Don't return empty lists for stacktrace
This can apparently happen, but I have no clue why.
This broke grouping by stackframe which assumed that at least on entry
will be present